# sensor-system-simulation

./: CMakeLists.txt  LICENSE  README.md  notes.txt
docs/: requirements.md
sensor-system-simulation/: CMakeLists.txt  sensor-system-simulation.cpp
sensor-system-simulation/http_client/: HttpClient.cpp  HttpClient.hpp
sensor-system-simulation/sensors/: GasSensor.hpp  HumiditySensor.hpp  RadiationSensor.hpp  Sensor.hpp  TemperatureSensor.hpp
server/: database.js  package-lock.json  package.json  server.js
server/public/: index.html  script.js  styles.css
simulation/: main.cpp
simulation/http_client/: HttpClient.cpp  HttpClient.h
simulation/sensors/: TemperatureSensor.h
